<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    >
    <LinearLayout
        android:gravity="center"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:layout_weight="3">
        <ImageView
            android:id="@+id/image_gio_hang"
            android:src="@mipmap/ic_launcher"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_margin="@dimen/dp_5"
            android:adjustViewBounds="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/dp_5"
        android:layout_weight="7"
        android:gravity="center"
        android:layout_width="@dimen/dp_0"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/text_ten_san_pham"
            android:id="@+id/text_ten_sp_gio_hang"
            android:textSize="@dimen/sp_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/text_gia_san_pham"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/color_gia_san_pham"
            android:id="@+id/text_gia_sp_gio_hang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:focusable="false"
                android:id="@+id/button_minus"
                android:layout_marginTop="@dimen/dp_5"
                android:textSize="@dimen/sp_30"
                android:text="@string/button_minus"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"/>
            <Button
                android:focusable="false"
                android:background="@null"
                android:id="@+id/button_value"
                android:layout_marginTop="@dimen/dp_5"
                android:textSize="@dimen/sp_30"
                android:text="@string/button_value"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"/>

            <Button
                android:focusable="false"
                android:id="@+id/button_add"
                android:layout_marginTop="@dimen/dp_5"
                android:textSize="@dimen/sp_30"
                android:text="@string/button_add"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>