<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChiTietSanPham"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_chi_tiet"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/title_toolbar_chi_tiet"
        app:titleTextColor="@android:color/white"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <ImageView
            android:id="@+id/image_chi_tiet_san_pham"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_150"
            android:src="@mipmap/ic_launcher"
            />
        <TextView
            android:id="@+id/text_ten_sp_chi_tiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/image_chi_tiet_san_pham"
            android:text="@string/text_ten_san_pham"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/text_gia_sp_chi_tiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_ten_sp_chi_tiet"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toRightOf="@id/image_chi_tiet_san_pham"
            android:text="@string/text_gia_san_pham"
            android:textColor="#c9270f"
            android:textSize="@dimen/sp_20"
            />
        <Spinner
            android:id="@+id/spiner_sp_chi_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_gia_sp_chi_tiet"
            android:layout_margin="@dimen/dp_4"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/image_chi_tiet_san_pham"
            android:background="@drawable/spinner"
            android:padding="@dimen/dp_15"
            />
        <Button
            android:id="@+id/button_them_gio_hang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spiner_sp_chi_tiet"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_toRightOf="@id/image_chi_tiet_san_pham"
            android:text="@string/text_them_gio_hang"
            android:textColor="#c9270f"
            android:textSize="@dimen/sp_18"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/text_mo_ta_san_pham_chi_tiet"
            android:textColor="@color/background_san_pham_moi_nhat"
            android:textSize="@dimen/sp_25"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/text_mo_ta_sp_chi_tiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:textSize="@dimen/sp_18"
                />

        </ScrollView>

    </LinearLayout>


</LinearLayout>