<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_150"
    android:orientation="vertical"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="@dimen/dp_4"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/imageview_phone"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_margin="@dimen/dp_2"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/text_name_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ten_san_pham"
                    android:textColor="@color/color_ten_san_pham"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/text_gia_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:text="@string/text_gia_san_pham"
                    android:textColor="@color/color_gia_san_pham"
                    />
                <TextView
                    android:id="@+id/text_mo_ta_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:text="@string/text_mo_ta_san_pham"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>